https://bugs.webkit.org/show_bug.cgi?id=85231 Fixed position objects that are removed from the DOM don't kick off fixed position recalculation -and corresponding- <rdar://problem/11297916>

Reviewed by Darin Adler.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::willBeDestroyed):



Canonical link: https://commits.webkit.org/102823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115725 268f45cc-cd09-0410-ab3c-d52691b4dbfc